fixed the divider colour as when in a hover / active button the color was not readable anymore

--- a/packages/components/src/counter/src/Counter.css
+++ b/packages/components/src/counter/src/Counter.css
@@ -44,7 +44,8 @@
     left: 0;
     bottom: 0;
     height: 80%;
-    border-left: 1px solid var(--o-ui-b-alias-low-break);
+    border-left: 1px solid currentColor;
+    opacity: 0.3;
 }
 
 /* DIVIDER | REVERSE */
@@ -55,7 +56,7 @@
 
 .o-ui-counter-divider.o-ui-counter-reverse::before {
     border-left: 0;
-    border-right: 1px solid var(--o-ui-b-alias-low-break);
+    border-right: 1px solid currentColor;
 }
 
 /* DIVIDER | COLOR | INHERIT */
